<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="14dp">

    <TextView
        android:id="@+id/dialog_setting_txt"
        android:text="@string/setting_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/dialog_timer_txt"
        android:text="@string/setting_txt_timer"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_timer_edit_text"
        app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"
        app:layout_constraintBottom_toBottomOf="@id/dialog_timer_edit_text" />

    <EditText
        android:id="@+id/dialog_timer_edit_text"
        android:text="30"
        android:hint="30:00"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:inputType="number"
        android:background="@drawable/backgroung_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintStart_toEndOf="@id/dialog_timer_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_setting_txt"/>

    <TextView
        android:id="@+id/dialog_short_break_txt"
        android:text="@string/setting_txt_short_break"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/dialog_timer_txt"
        app:layout_constraintTop_toTopOf="@id/dialog_short_break_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/dialog_short_break_edit_text" />

    <EditText
        android:id="@+id/dialog_short_break_edit_text"
        android:text="5"
        android:hint="05:00"
        android:textSize="20sp"
        android:inputType="number"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:background="@drawable/backgroung_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/dialog_timer_edit_text"
        app:layout_constraintEnd_toEndOf="@id/dialog_timer_edit_text"
        app:layout_constraintTop_toBottomOf="@id/dialog_timer_edit_text"/>

    <TextView
        android:id="@+id/dialog_long_break_txt"
        android:text="@string/setting_txt_long_break"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/dialog_short_break_txt"
        app:layout_constraintTop_toTopOf="@id/dialog_long_break_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/dialog_long_break_edit_text"/>

    <EditText
        android:id="@+id/dialog_long_break_edit_text"
        android:text="15"
        android:hint="15:00"
        android:textSize="20sp"
        android:inputType="number"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:background="@drawable/backgroung_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/dialog_short_break_edit_text"
        app:layout_constraintEnd_toEndOf="@id/dialog_short_break_edit_text"
        app:layout_constraintTop_toBottomOf="@id/dialog_short_break_edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>